fixed the sizing of the rounds to not wrap

--- a/src/components/round/round.scss
+++ b/src/components/round/round.scss
@@ -2,9 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   position: relative;
   padding: 50px 30px 0 30px;
   border-left: 0.5px solid gray;
+  flex-grow: 1;
+  min-width: 220px;
+  box-sizing: border-box;
 
   &__header {
     position: absolute;
